# medical_scribe

./: .gitignore  AZURE_MINIMAL_SETUP.md  AZURE_OPENAI_QUICKSTART.md  Architecture Diagram Standard (Confluence).docx  Authentication & Authorization Model Standard (Confluence).docx  DEPLOYMENT_CHECKLIST.md  Data Flow Diagram Standard (Confluence).docx  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  OPENAI_SETUP.md  PRODUCTION_CHANGES.md  PROJECT_SUMMARY.md  QUICK_START_GUIDE.md  README.md  SETUP.md  START_HERE.md  Web-Facing Application Security & Readiness Playbook.docx  docker-compose.yml  medicalscribe.db  package-lock.json  package.json  pyproject.toml  quick-start.ps1  readdddd  requirements.txt
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
.next/cache/: .previewinfo  .rscinfo
.next/dev/: prerender-manifest.json  trace
.next/dev/cache/: .rscinfo  chrome-devtools-workspace-uuid
.next/dev/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/dev/types/: routes.d.ts  validator.ts
.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
.next/server/app/: _global-error.html  _global-error.rsc  _not-found.html  dashboard.html  data-browser.html  encounters.html  encounters.rsc  index.html  index.rsc  login.html  login.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
.next/types/: validator.ts
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
app/data-browser/: page.tsx
app/encounters/: page.tsx
app/login/: page.tsx
components/: auth-provider.tsx
docs/: CONTRIBUTING.md  HIPAA_COMPLIANCE.md  HITRUST_COMPLIANCE.md  REPORTING_FEATURES.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
infrastructure/: main.tf
lib/: auth.ts
scripts/: init_db.py  setup.ps1  setup.sh  test_azure.sh
security/: __init__.py  audit.py  encryption.py
src/: __init__.py  main.py
src/core/: config.py  database.py  database_init.py
src/models/: analytics.py  base.py  medical.py  user.py
src/services/: reporting_service.py  soap_service.py  transcription_service.py
src/storage/: storage.py
tests/: test_azure_connection.py  test_encryption.py
(+391 files in other folders)
